--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,86 @@
 
 .app {
-  margin-top: 50px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-animation: fadein-out 5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein-out 5s; /* Firefox < 16 */
+  -ms-animation: fadein-out 5s; /* Internet Explorer */
+  -o-animation: fadein-out 5s; /* Opera < 12.1 */
+  animation: fadein-out 5s;
+}
+
+.game-header {
+  margin-top: 25px;
+  font-size: 21px;
+  text-align: center;
+  color: white;
+  color: white;
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-size: 30px;
+  text-shadow: 0px 0px 4px white;
+  text-decoration: underline;
+  -webkit-animation: fadein-out 12s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein-out 12s; /* Firefox < 16 */
+  -ms-animation: fadein-out 12s; /* Internet Explorer */
+  -o-animation: fadein-out 12s; /* Opera < 12.1 */
+  animation: fadein-out 12s;
+}
+
+@keyframes fadein-out {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
+
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein-out {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein-out {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein-out {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein-out {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1
+  }
 }
