--- a/src/frontend/css.css
+++ b/src/frontend/css.css
@@ -1,10 +1,9 @@
 
 .grid {
-  width: 150px;
+  width: auto;
   height: auto;
-  margin: auto;
-  box-shadow: 0px 0px 20px white;
-  background: white;
+  box-shadow: 0px 0px 15px white;
+  background: black;
   display: flex;
   flex-wrap: wrap;
   margin-top: 25px;
@@ -12,7 +11,7 @@
 
 .cell {
   display: inline-block;
-  border: 1px solid black;
+  border: 1px solid rgb(169, 169, 169, .3);
   width: 15px;
   height: 15px;;
   margin-top: -1px;
@@ -21,15 +20,15 @@
 }
 
 .dead {
-  background-color: lightgrey;
+  background-color: black;
 }
 
 .alive {
-  background-color: green;
+  background-color: #38c4e7;
 }
 
 .cell:hover {
-  background: #00ccff;
+  background: #38c4e7;
 }
 
 .cosmos {
@@ -38,3 +37,60 @@
   justify-content: center;
   align-items: center;
 }
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 25px;
+  color: white;
+  font-weight: bold;
+}
+
+.left-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 55%;
+  margin-left: 20px;
+}
+
+.right-buttons {
+  margin-right: 20px;
+}
+
+.right-button {
+  display: flex;
+  justify-content: center;
+  border: 2px solid grey;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px white;
+  opacity: .9;
+  text-shadow: 0px 0px 2px white;
+  width: 200px;
+  color: #38c4e7;
+}
+
+.generations-header {
+  display: flex;
+  justify-content: center;
+  color: white;
+  margin-left: 20px;
+  border: 2px solid grey;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px white;
+  opacity: .9;
+  width: 32%;
+  text-shadow: 0px 0px 2px white;
+}
+
+.button {
+  border: 2px solid grey;
+  padding: 7px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px white;
+  opacity: .9;
+  text-shadow: 0px 0px 2px white;
+}
+
