--- a/src/frontend/css.css
+++ b/src/frontend/css.css
@@ -43,7 +43,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 25px;
+  margin-top: 35px;
   color: white;
   font-weight: bold;
 }
@@ -51,8 +51,9 @@
 .left-buttons {
   display: flex;
   justify-content: space-between;
-  width: 37%;
+  width: 60%;
   margin-left: 20px;
+  font-size: 14px;
 }
 
 .right-buttons {
@@ -88,7 +89,7 @@
 
 .button {
   border: 2px solid grey;
-  padding: 7px;
+  padding: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px white;
   opacity: .9;
