--- a/src/App.css
+++ b/src/App.css
@@ -84,15 +84,27 @@
   }
 
   5% {
-    opacity: .7
+    opacity: .6
   }
 
   10% {
     opacity: .2
   }
 
-  20% {
-    opacity: .4
+  11% {
+    opacity: .6
+  }
+
+  12% {
+    opacity: .2
+  }
+
+  13% {
+    opacity: .6
+  }
+
+  14% {
+    opacity: .2
   }
 
   100% {
@@ -107,15 +119,27 @@
   }
 
   5% {
-    opacity: .7
+    opacity: .6
   }
 
   10% {
     opacity: .2
   }
 
-  20% {
-    opacity: .4
+  11% {
+    opacity: .6
+  }
+
+  12% {
+    opacity: .2
+  }
+
+  13% {
+    opacity: .6
+  }
+
+  14% {
+    opacity: .2
   }
 
   100% {
@@ -130,15 +154,27 @@
   }
 
   5% {
-    opacity: .7
+    opacity: .6
   }
 
   10% {
     opacity: .2
   }
 
-  20% {
-    opacity: .4
+  11% {
+    opacity: .6
+  }
+
+  12% {
+    opacity: .2
+  }
+
+  13% {
+    opacity: .6
+  }
+
+  14% {
+    opacity: .2
   }
 
   100% {
@@ -153,15 +189,27 @@
   }
 
   5% {
-    opacity: .7
+    opacity: .6
   }
 
   10% {
     opacity: .2
   }
 
-  20% {
-    opacity: .4
+  11% {
+    opacity: .6
+  }
+
+  12% {
+    opacity: .2
+  }
+
+  13% {
+    opacity: .6
+  }
+
+  14% {
+    opacity: .2
   }
 
   100% {
@@ -176,15 +224,27 @@
   }
 
   5% {
-    opacity: .7
+    opacity: .6
   }
 
   10% {
     opacity: .2
   }
 
-  20% {
-    opacity: .4
+  11% {
+    opacity: .6
+  }
+
+  12% {
+    opacity: .2
+  }
+
+  13% {
+    opacity: .6
+  }
+
+  14% {
+    opacity: .2
   }
 
   100% {
