sped up the text

--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,7 @@
     opacity: 0
   }
 
-  40% {
+  20% {
     opacity: 0
   }
 
@@ -276,7 +276,7 @@
     opacity: 0
   }
 
-  40% {
+  20% {
     opacity: 0
   }
 
@@ -291,7 +291,7 @@
     opacity: 0
   }
 
-  40% {
+  20% {
     opacity: 0
   }
 
@@ -306,7 +306,7 @@
     opacity: 0
   }
 
-  40% {
+  20% {
     opacity: 0
   }
 
@@ -321,7 +321,7 @@
     opacity: 0
   }
 
-  40% {
+  20% {
     opacity: 0
   }
 
@@ -339,7 +339,7 @@
     opacity: 0
   }
 
-  25% {
+  15% {
     opacity: 0
   }
 
@@ -354,7 +354,7 @@
     opacity: 0
   }
 
-  25% {
+  15% {
     opacity: 0
   }
 
@@ -369,6 +369,10 @@
     opacity: 0
   }
 
+  15% {
+    opacity: 0
+  }
+
   100% {
     opacity: 1
   }
@@ -380,7 +384,7 @@
     opacity: 0
   }
 
-  25% {
+  15% {
     opacity: 0
   }
 
@@ -395,7 +399,7 @@
     opacity: 0
   }
 
-  25% {
+  15% {
     opacity: 0
   }
 
