--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 .app {
-  margin-top: 40px;
+  margin-top: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -105,6 +105,34 @@
   -ms-animation: fadeinslow 35s; /* Internet Explorer */
   -o-animation: fadeinslow 35s; /* Opera < 12.1 */
   animation: fadeinslow 35s;
+}
+
+.link {
+  font-size: 15px;
+  text-align: center;
+  color: white;
+  color: white;
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  text-shadow: 0px 0px 4px white;
+  -webkit-animation: fadeinslow 35s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadeinslow 35s; /* Firefox < 16 */
+  -ms-animation: fadeinslow 35s; /* Internet Explorer */
+  -o-animation: fadeinslow 35s; /* Opera < 12.1 */
+  animation: fadeinslow 35s;
+}
+
+.links {
+margin: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 20%;
+  margin-top: 50px;
+}
+
+.whole-app {
+  display: flex;
+  flex-direction: column;
 }
 
 /* these are the instructions for the app */
